// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "2 out of 5 code suggestions were accepted in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_acceptance_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "Monthly user engagement with AI Code Suggestions. Percentage ratio calculated as monthly unique Code Suggestions users / total monthly unique code contributors in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "5 out of 10 GitLab Duo users interacted with Duo Chat in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/gitlab_duo_chat/_index",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_chat_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with null values response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with valid response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "3 out of 10 GitLab Duo assigned seats used at least one AI feature in the last 30 days. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/subscriptions/subscription-add-ons#assign-gitlab-duo-seats",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_usage_rate metric with zeroes response will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "title": "Last 30 days",
        "titleIcon": "clock",
        "tooltip": {
          "description": "No usage data for the selected time range.",
        },
      },
    },
  ],
]
`;
